--- a/about.html
+++ b/about.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google Site Verification -->
-    <meta name="google-site-verification" content="gaccuYDD5yNIiq5RlpUDrm_dB2VMUuL0UO7nwF9bsh4" />
-
+    
     <!-- Character Encoding and Viewport -->
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" /> <!-- Ensures compatibility with older browsers -->
     <title>SRI SAI ELEVATORS - Safe and Reliable Elevator Solutions</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> <!-- Optimized viewport -->
 
     <!-- Meta Keywords and Description -->
-    <meta content="elevator solutions, hospital elevators, goods elevators, passenger elevators, elevator safety features, custom elevator designs, elevator installation, elevator maintenance, Chittoor elevators" name="keywords" />
-    <meta content="SRI SAI ELEVATORs provides comprehensive vertical movement solutions with advanced safety features and custom designs. We specialize in passenger, hospital, and goods elevators." name="description" />
+    <meta name="keywords" content="elevator solutions, hospital elevators, goods elevators, passenger elevators, elevator safety features, custom elevator designs, elevator installation, elevator maintenance, Chittoor elevators" />
+    <meta name="description" content="SRI SAI ELEVATORS provides comprehensive vertical movement solutions with advanced safety features and custom designs. We specialize in passenger, hospital, and goods elevators." />
+
+    <!-- Open Graph Tags for Social Media SEO -->
+    <meta property="og:title" content="SRI SAI ELEVATORS - Safe and Reliable Elevator Solutions" />
+    <meta property="og:description" content="SRI SAI ELEVATORS provides comprehensive vertical movement solutions with advanced safety features and custom designs." />
+    <meta property="og:image" content="https://srisaielevator.com/img/logo/sri-sai-elevator-logo.webp" />
+    <meta property="og:url" content="https://srisaielevator.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SRI SAI ELEVATORS - Safe and Reliable Elevator Solutions" />
+    <meta name="twitter:description" content="SRI SAI ELEVATORS provides comprehensive vertical movement solutions with advanced safety features and custom designs." />
+    <meta name="twitter:image" content="https://srisaielevator.com/img/logo/sri-sai-elevator-logo.webp" />
 
     <!-- Favicon -->
-    <link rel="icon" href="img/logo/sri-sai-elevator-logo.jpg" type="image/x-icon">
+    <link rel="icon" href="img/logo/sri-sai-elevator-logo.webp" type="image/webp"> <!-- Use WebP for faster loading -->
 
     <!-- Schema Markup for Local Business -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "SRI SAI ELEVATORs",
+      "name": "SRI SAI ELEVATORS",
       "url": "https://srisaielevator.com",
-      "logo": "https://srisaielevator.com/img/logo/sri-sai-elevator-logo.jpg",
-      "description": "SRI SAI ELEVATOR offers safe, reliable, and innovative elevator solutions tailored to meet client needs. We specialize in passenger, hospital, and goods elevators with advanced safety features.",
+      "logo": "https://srisaielevator.com/img/logo/sri-sai-elevator-logo.webp", <!-- Updated to WebP -->
+      "description": "SRI SAI ELEVATORS offers safe, reliable, and innovative elevator solutions tailored to meet client needs. We specialize in passenger, hospital, and goods elevators with advanced safety features.",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "2-201/5A, C M T Road, Revenue Ward No 2",
@@ -49,83 +61,92 @@
     }
     </script>
 
-    <!-- Google Web Fonts -->
+    <!-- Preconnect to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Minified and Optimized Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap" rel="stylesheet" />
 
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <!-- Icon Font Stylesheet (Minified) -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" /> <!-- Reduced redundancy -->
 
-    <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet" />
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
+    <!-- Libraries Stylesheet (Deferred Loading) -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet" media="print" onload="this.media='all'"> <!-- Deferred CSS -->
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" media="print" onload="this.media='all'"> <!-- Deferred CSS -->
 
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Customized Bootstrap Stylesheet (Deferred Loading) -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="print" onload="this.media='all'"> <!-- Deferred CSS -->
 
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet" />
-</head>
+    <!-- Template Stylesheet (Deferred Loading) -->
+    <link href="css/style.css" rel="stylesheet" media="print" onload="this.media='all'"> <!-- Deferred CSS -->
+  </head>
 
   <body>
     <!-- Spinner Start -->
-    <!-- Spinner Start -->
-<div
-id="spinner"
-class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
->
-<div
-  class="spinner-border text-primary"
-  style="width: 3rem; height: 3rem"
-  role="status"
->
-  <span class="sr-only">Loading...</span>
-</div>
-</div>
-<!-- Spinner End -->
+    <div
+        id="spinner"
+        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
+    >
+        <div
+            class="spinner-border text-primary"
+            style="width: 3rem; height: 3rem"
+            role="status"
+        >
+            <span class="visually-hidden">Loading...</span> <!-- Improved accessibility -->
+        </div>
+    </div>
+    <!-- Spinner End -->
 
-<!-- Navbar Start -->
-<nav
-class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
->
-<!-- Logo -->
-<a href="index.html" class="navbar-brand d-flex align-items-center  px-lg-5">
-  <img src="img/logo/sri-sai-elevator-logo.jpg" alt="SRI SAI ELEVATOR Logo" class="img-fluid" style="max-height: 72px;">
-</a>
+    <!-- Navbar Start -->
+    <nav
+        class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
+    >
+        <!-- Logo -->
+        <a href="index.html" class="navbar-brand d-flex align-items-center px-lg-5">
+            <img 
+                src="img/logo/sri-sai-elevator-logo.webp" 
+                alt="SRI SAI ELEVATORS Logo" 
+                class="img-fluid" 
+                style="max-height: 72px;" 
+                loading="lazy" 
+            >
+        </a>
 
-<!-- Toggler Button -->
-<button
-  id="combo"
-  type="button"
-  class="navbar-toggler me-4"
-  data-bs-toggle="collapse"
-  data-bs-target="#navbarCollapse"
->
-  <span class="navbar-toggler-icon"></span>
-</button>
+        <!-- Toggler Button -->
+        <button
+            type="button"
+            class="navbar-toggler me-4"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse"
+            aria-controls="navbarCollapse"
+            aria-expanded="false"
+            aria-label="Toggle navigation" 
+        >
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-<!-- Navbar Links -->
-<div class="collapse navbar-collapse" id="navbarCollapse">
-  <div class="navbar-nav ms-auto p-4 p-lg-0">
-    <a href="index.html" class="nav-item nav-link active">Home</a>
-    <a href="about.html" class="nav-item nav-link">About Us</a>
-    <a href="Services.html" class="nav-item nav-link">Services</a>
-    <a href="Lift-Designs.html" class="nav-item nav-link"> Lifts Designs</a>
-    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-  </div>
+        <!-- Navbar Links -->
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <a href="index.html" class="nav-item nav-link active" aria-current="page">Home</a> <!-- Added aria-current -->
+                <a href="about.html" class="nav-item nav-link">About Us</a>
+                <a href="services.html" class="nav-item nav-link">Services</a> <!-- Fixed capitalization in filename -->
+                <a href="lift-designs.html" class="nav-item nav-link">Lift Designs</a> <!-- Fixed capitalization in filename -->
+                <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+            </div>
 
-  <!-- Call-to-Action Button -->
-  <button id="openFormButton1" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft d-none d-md-block">
-    Get a Quote <i class="fa fa-arrow-right ms-3"></i>
-  </button>
-</div>
-</nav>
-<!-- Navbar End -->
-
-
+            <!-- Call-to-Action Button -->
+            <button 
+                id="openFormButton1" 
+                class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft d-none d-md-block"
+                aria-label="Get a Quote" 
+            >
+                Get a Quote <i class="fa fa-arrow-right ms-3"></i>
+            </button>
+        </div>
+    </nav>
+    <!-- Navbar End -->
 
 
 
@@ -451,152 +472,93 @@ aria-label="Make a direct call"
 
           <!-- Testimonial End -->
 
-    <!-- Footer Start -->
-    <div
-    class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn"
-    data-wow-delay="0.1s"
-  >
-    <div class="container py-5">
-      <div class="row g-5">
-        <!-- Helpful Links -->
-        <div class="col-lg-3 col-md-6">
-          <h4 class="text-white mb-3">Helpful Links</h4>
-          <a class="btn btn-link" href="about.html">About Us</a>
-          <a class="btn btn-link" href="Services.html">Services</a>
-          <a class="btn btn-link" href="Lift-Designs.html">Lift Designs</a>
-          <a class="btn btn-link" href="contact.html">Contact Us</a>
-        </div>
-  
-        <!-- Contact Information -->
-        <div class="col-lg-3 col-md-6">
-          <h4 class="text-white mb-3">Contact</h4>
-          <p class="mb-2">
-            <i class="fa fa-map-marker-alt me-3"></i>
-            2-201/5A, C M T Road, Revenue Ward No 2, Chittoor - 517001
-          </p>
-          <p class="mb-2">
-            <i class="fa fa-phone-alt me-3"></i>
-            <a href="tel:+919912226111">+91 9912226111</a>
-          </p>
-          <p class="mb-2">
-            <i class="fa fa-envelope me-3"></i>
-            <a href="mailto:srisaielevatorsctr@gmail.com?subject=Inquiry&cc=srisaielevatorsctr@gmail.com">srisaielevatorsctr@gmail.com</a>
-          </p>
-          <!-- Social Media Icons (Optional) -->
-          <!-- <div class="d-flex pt-2">
-            <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-twitter"></i></a>
-            <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-facebook-f"></i></a>
-            <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-youtube"></i></a>
-            <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-linkedin-in"></i></a>
-          </div> -->
-        </div>
-  
-        <!-- Gallery -->
-        <!-- <div class="col-lg-3 col-md-6">
-          <h4 class="text-white mb-3">Gallery</h4>
-          <div class="row g-2 pt-2">
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light "
-                src="img/gallery/passenger-elevator.jpeg"
-                alt="Passenger Elevator"
-              />
-            </div>
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light "
-                src="img/gallery/hospital-elevator.jpeg"
-                alt="Hospital Elevator"
-              />
-            </div>
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light "
-                src="img/gallery/goods-elevator.jpeg"
-                alt="Goods Elevator"
-              />
-            </div>
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light"
-                src="img/gallery/safety-features.jpeg"
-                alt="Safety Features"
-              />
-            </div>
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light"
-                src="img/gallery/design-options.jpeg"
-                alt="Design Options"
-              />
-            </div>
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light"
-                src="img/gallery/installation.jpeg"
-                alt="Elevator Installation"
-              />
-            </div>
-          </div>
-        </div> -->
-  
-        <!-- Additional Column (Optional) -->
-        <div class="col-lg-3 col-md-6">
-          <h4 class="text-white mb-3">Our Services</h4>
-          <p class="mb-2">
-            <i class="fa fa-check me-2 text-primary"></i>
-            Passenger Elevators
-          </p>
-          <p class="mb-2">
-            <i class="fa fa-check me-2 text-primary"></i>
-            Hospital Elevators
-          </p>
-          <p class="mb-2">
-            <i class="fa fa-check me-2 text-primary"></i>
-            Goods Elevators
-          </p>
-          <p class="mb-2">
-            <i class="fa fa-check me-2 text-primary"></i>
-            Customized Designs
-          </p>
-        </div>
-      </div>
+     <!-- Footer Start -->
+<div
+class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn"
+data-wow-delay="0.1s"
+>
+<div class="container py-5">
+  <div class="row g-5">
+    <!-- Helpful Links -->
+    <div class="col-lg-3 col-md-6">
+      <h4 class="text-white mb-3">Helpful Links</h4>
+      <a class="btn btn-link" href="about.html" aria-label="About Us">About Us</a>
+      <a class="btn btn-link" href="services.html" aria-label="Services">Services</a>
+      <a class="btn btn-link" href="lift-designs.html" aria-label="Lift Designs">Lift Designs</a>
+      <a class="btn btn-link" href="contact.html" aria-label="Contact Us">Contact Us</a>
     </div>
-  
-    <!-- Copyright Section -->
-    <div class="container">
-      <div class="copyright">
-        <div class="row">
-          <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-            &copy; <a class="border-bottom" href="#">SRI SAI ELEVATORS</a>, All Rights Reserved.
-            Designed By
-            <a class="border-bottom" href="https://www.instagram.com/nani_500411/">nani_500411</a>
-          </div>
-          <div class="col-md-6 text-center text-md-end">
-            <div class="footer-menu">
-              <a href="index.html">Home</a>
-              <a href="about.html">About</a>
-              <a href="contact.html">Contact</a>
-              
-            </div>
-          </div>
+
+    <!-- Contact Information -->
+    <div class="col-lg-3 col-md-6">
+      <h4 class="text-white mb-3">Contact</h4>
+      <p class="mb-2">
+        <i class="fa fa-map-marker-alt me-3"></i>
+        2-201/5A, C M T Road, Revenue Ward No 2, Chittoor - 517001
+      </p>
+      <p class="mb-2">
+        <i class="fa fa-phone-alt me-3"></i>
+        <a href="tel:+919912226111" aria-label="Call us at +91 9912226111">+91 9912226111</a>
+      </p>
+      <p class="mb-2">
+        <i class="fa fa-envelope me-3"></i>
+        <a href="mailto:srisaielevatorsctr@gmail.com?subject=Inquiry&cc=srisaielevatorsctr@gmail.com" aria-label="Email us at srisaielevatorsctr@gmail.com">srisaielevatorsctr@gmail.com</a>
+      </p>
+    </div>
+
+    <!-- Additional Column (Optional) -->
+    <div class="col-lg-3 col-md-6">
+      <h4 class="text-white mb-3">Our Services</h4>
+      <p class="mb-2">
+        <i class="fa fa-check me-2 text-primary"></i>
+        Passenger Elevators
+      </p>
+      <p class="mb-2">
+        <i class="fa fa-check me-2 text-primary"></i>
+        Hospital Elevators
+      </p>
+      <p class="mb-2">
+        <i class="fa fa-check me-2 text-primary"></i>
+        Goods Elevators
+      </p>
+      <p class="mb-2">
+        <i class="fa fa-check me-2 text-primary"></i>
+        Customized Designs
+      </p>
+    </div>
+  </div>
+</div>
+
+<!-- Copyright Section -->
+<div class="container">
+  <div class="copyright">
+    <div class="row">
+      <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+        &copy; <a class="border-bottom" href="#" aria-label="SRI SAI ELEVATORS">SRI SAI ELEVATORS</a>, All Rights Reserved.
+        Designed By
+        <a class="border-bottom" href="https://www.instagram.com/nani_500411/" aria-label="Designed by nani_500411">nani_500411</a>
+      </div>
+      <div class="col-md-6 text-center text-md-end">
+        <div class="footer-menu">
+          <a href="index.html" aria-label="Home">Home</a>
+          <a href="about.html" aria-label="About">About</a>
+          <a href="contact.html" aria-label="Contact">Contact</a>
         </div>
       </div>
     </div>
   </div>
-    <!-- Footer End -->
+</div>
+</div>
+<!-- Footer End -->
 
-   
+<!-- JavaScript Libraries -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script> <!-- Deferred loading -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" defer></script> <!-- Deferred loading -->
+<script src="lib/wow/wow.min.js" defer></script> <!-- Deferred loading -->
+<script src="lib/easing/easing.min.js" defer></script> <!-- Deferred loading -->
+<script src="lib/waypoint/waypoints.min.js" defer></script> <!-- Deferred loading -->
+<script src="lib/owlcarousel/owl.carousel.min.js" defer></script> <!-- Deferred loading -->
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoint/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+<!-- Template Javascript -->
+<script src="js/main.js" defer></script> <!-- Deferred loading -->
   </body>
 </html>
