--- a/index.html
+++ b/index.html
@@ -84,42 +84,50 @@
 </head>
 
 <body>
-    <!-- Spinner Start -->
-    <div
-        id="spinner"
-        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
-        style="z-index: 9999;" 
-    >
-        <div
-            class="spinner-border text-primary"
-            style="width: 3rem; height: 3rem;"
-            role="status"
-        >
-            <span class="visually-hidden">Loading...</span> <!-- Improved accessibility -->
-        </div>
-    </div>
-    <!-- Spinner End -->
+ <!-- Spinner Start -->
+<div
+id="spinner"
+class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
+style="z-index: 9999;" 
+>
+<div
+    class="spinner-border text-primary"
+    style="width: 3rem; height: 3rem;"
+    role="status"
+>
+    <span class="visually-hidden">Loading...</span> <!-- Improved accessibility -->
+</div>
+</div>
+<!-- Spinner End -->
 
-    <!-- Remove Spinner After Page Load -->
-    <script>
-        // Ensure the spinner is visible immediately on page load
-        document.addEventListener("DOMContentLoaded", function () {
-            const spinner = document.getElementById('spinner');
-            if (spinner) {
-                // Hide spinner after the page has fully loaded
-                window.setTimeout(() => {
-                    spinner.style.display = 'none';
-                }, 500); // Optional delay to ensure smooth transition
-            }
+<!-- Hide All Content Initially -->
+<style>
+body > :not(#spinner) {
+    visibility: hidden; /* Use visibility instead of display */
+    opacity: 0; /* Ensure smooth fade-in effect */
+    transition: opacity 0.5s ease-in-out; /* Smooth transition */
+}
+</style>
+
+<!-- Remove Spinner After Page Load -->
+<script>
+// Ensure the spinner is visible immediately on page load
+document.addEventListener("DOMContentLoaded", function () {
+    const spinner = document.getElementById('spinner');
+    if (spinner) {
+        // Show the rest of the content
+        document.querySelectorAll('body > :not(#spinner)').forEach(el => {
+            el.style.visibility = 'visible'; // Make content visible
+            el.style.opacity = '1'; // Fade in the content
         });
 
-        // Ensure spinner is visible during initial load
-        document.onreadystatechange = function () {
-            if (document.readyState === "loading") {
-                document.getElementById('spinner').style.display = 'flex';
-            }
-        };
-    </script>
+        // Hide spinner after the page has fully loaded
+        window.setTimeout(() => {
+            spinner.style.display = 'none';
+        }, 500); // Optional delay to ensure smooth transition
+    }
+});
+</script>
 
 
     <!-- Navbar Start -->
